Update for Noetic and Melodic

--- a/LeGO-LOAM/CMakeLists.txt
+++ b/LeGO-LOAM/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(lego_loam_bor)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -g ")
-
-#
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lboost_system -DGTSAM_USE_SYSTEM_EIGEN=ON")
 
 find_package(catkin REQUIRED COMPONENTS
   tf
